--- a/MetalWork/appsettings.json
+++ b/MetalWork/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=metallasttest;Trusted_Connection=True;"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=metaldb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
